# Codefix-CLI

./: README.md  codefix  codefix.py  requirements.txt  settings.toml
Codefix-CLI-main/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Codefix-CLI-main/src/codefixcli/: __init__.py  cli.py
Codefix-CLI-main/src/codefixcli/debugger/: ast_scan.py  llm.py  patcher.py  reporter.py  sandbox.py
Codefix-CLI-main/tests/: test_ast.py  test_llm_prompts.py
debugger/: __init__.py  ast_scan.py  llm.py  llm.py.save  patcher.py  sandbox.py
